<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/fondo_default"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/communicate"
        android:text="@string/empty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/labels_normal"
        android:layout_centerHorizontal="true"
        android:drawableStart="@drawable/ic_place_black_24dp"
        />

    <TextView
        android:id="@+id/card_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/communicate"
        style="@style/labels_normal"
        android:layout_centerHorizontal="true"
        android:drawableStart="@drawable/ic_directions_black_24dp"
        android:text="@string/empty_text"/>

    <TextView
        android:id="@+id/title_maximum_speed"
        android:text="@string/velocidad_maxima"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/labels_normal"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/card_info"/>



    <LinearLayout
        android:id="@+id/container_velocity"
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:layout_below="@id/title_maximum_speed"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:gravity="center|bottom">

        <TextView
            android:id="@+id/velocity"
            android:text="@string/empty_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceLarge"
            android:background="@drawable/rounded_button_green"
            android:padding="16dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:textSize="60sp"/>



    </LinearLayout>

    <TextView
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/km_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/container_velocity"
        android:layout_below="@id/title_maximum_speed"
        android:layout_marginTop="80dp"/>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/container_latlong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:layout_below="@id/container_velocity"
        android:layout_centerHorizontal="true">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/latitud"
                style="@style/labels_normal"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/lbl_lat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty_velocity"
                style="@style/labels_pequeños"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/longitud"
                style="@style/labels_normal"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/lbl_long"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty_velocity"
                style="@style/labels_pequeños"/>
        </LinearLayout>
    </LinearLayout>



    <Button
        android:id="@+id/btn_salir"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="salir"
        android:background="@color/colorTextosRed"
        />

    <Button
        android:visibility="gone"
        android:id="@+id/run_point_in_polygon"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/descargar_datos"
        android:drawableBottom="@drawable/ic_cloud_download_black_24dp"

        />

</RelativeLayout>
